@@ -1,10 +1,13 @@
 package me.thegabro.playtimemanager.Users;
 
+import me.thegabro.playtimemanager.ExternalPluginSupport.LuckPermsManager;
 import me.thegabro.playtimemanager.SQLiteDB.PlayTimeDatabase;
 import me.thegabro.playtimemanager.PlayTimeManager;
 import org.bukkit.Bukkit;
+import org.bukkit.entity.Player;
 
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
@@ -74,22 +77,56 @@ public class DBUsersManager {
         return userCache.computeIfAbsent(uuid, k -> DBUser.fromUUID(uuid));
     }
 
+    private boolean hasHidePermission(DBUser user) {
+        return LuckPermsManager.getInstance(plugin).hasPermission(user.getUuid(), "playtime.hidefromleaderboard");
+    }
+
     public void updateTopPlayersFromDB() {
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-                // Wait for all online users to be updated
                 onlineUsersManager.updateAllOnlineUsersPlaytime().get();
 
-                // Now that updates are complete, get the top players
-                Map<String, String> dbTopPlayers = db.getTopPlayersByPlaytime(TOP_PLAYERS_LIMIT);
+                if (plugin.getServer().getPluginManager().getPlugin("LuckPerms") != null) {
+                    // Get count of players with hide permission asynchronously
+                    CompletableFuture<Integer> permissionCountFuture = CompletableFuture.supplyAsync(() ->
+                            LuckPermsManager.getInstance(plugin).getPlayersWithPermissionCount("playtime.hidefromleaderboard"));
 
-                synchronized (topPlayers) {
-                    topPlayers.clear();
-                    dbTopPlayers.entrySet().stream()
-                            .map(entry -> getUserFromUUID(entry.getKey()))
-                            .filter(Objects::nonNull)
-                            .forEach(topPlayers::add);
+                    int playersWithHidePermission = permissionCountFuture.get();
+
+                    // Fetch more players from DB to account for those that will be filtered out
+                    Map<String, String> dbTopPlayers = db.getTopPlayersByPlaytime(TOP_PLAYERS_LIMIT + playersWithHidePermission);
+
+                    Bukkit.getScheduler().runTask(plugin, () -> {
+                        List<DBUser> validTopPlayers = dbTopPlayers.keySet().stream()
+                                .map(this::getUserFromUUID)
+                                .filter(Objects::nonNull)
+                                .filter(user -> !hasHidePermission(user))
+                                .limit(TOP_PLAYERS_LIMIT)
+                                .toList();
+
+                        synchronized (topPlayers) {
+                            topPlayers.clear();
+                            topPlayers.addAll(validTopPlayers);
+                        }
+                    });
+                } else {
+                    // No LuckPerms, just get the top players without permission filtering
+                    Map<String, String> dbTopPlayers = db.getTopPlayersByPlaytime(TOP_PLAYERS_LIMIT);
+
+                    Bukkit.getScheduler().runTask(plugin, () -> {
+                        List<DBUser> validTopPlayers = dbTopPlayers.keySet().stream()
+                                .map(this::getUserFromUUID)
+                                .filter(Objects::nonNull)
+                                .limit(TOP_PLAYERS_LIMIT)
+                                .toList();
+
+                        synchronized (topPlayers) {
+                            topPlayers.clear();
+                            topPlayers.addAll(validTopPlayers);
+                        }
+                    });
                 }
+
             } catch (InterruptedException | ExecutionException e) {
                 plugin.getLogger().severe("Error updating top players: " + e.getMessage());
             }
@@ -120,7 +157,7 @@ public class DBUsersManager {
         synchronized (topPlayers) {
             List<DBUser> sortedPlayers = topPlayers.stream()
                     .sorted(Comparator.comparing(DBUser::getPlaytime).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
             return sortedPlayers.get(position - 1);
         }
     }
